added : Learn essential and career life skills

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "firebase": "^11.9.1",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.514.0",
     "mongodb": "^6.17.0",
@@ -27,6 +27,7 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.22.0",
+    "swiper": "^10.3.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
