--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.8",
     "firebase": "^11.9.1",
     "framer-motion": "^12.23.24",
@@ -22,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.6.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
